--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 html {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
-  
+
 table {
   border-collapse: collapse;
-  border: 2px solid rgb(200,200,200);
+  border: 2px solid rgb(200, 200, 200);
   letter-spacing: 1px;
   font-size: 0.8rem;
 }
 
-td, th {
-  border: 1px solid rgb(190,190,190);
+td,
+th {
+  border: 1px solid rgb(190, 190, 190);
   padding: 10px 20px;
 }
 
@@ -23,7 +24,7 @@ td {
 }
 
 tr:nth-child(even) td {
-  background-color: rgb(250,250,250);
+  background-color: rgb(250, 250, 250);
 }
 
 tr:nth-child(odd) td {
