--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,17 @@ form {
 h3 {
   text-align: center;
 }
+
+input:focus {
+  outline: inherit;
+}
+
+input:valid {
+  border: 1px solid rgb(127, 176, 253);
+  border-radius: 2px;
+}
+
+input:invalid {
+  border: 1px solid red;
+  border-radius: 2px;
+}
